[package]
name = "merdia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.12", features = ["macros"] }
byte-pool = "0.2.4"
bytecodec = "0.4.15"
futures-util = "0.3.28"
gstreamer = { version = "0.20.5", features = ["serde", "serde_bytes", "v1_20"] }
gstreamer-sdp = { version = "0.20.0", features = ["v1_20"] }
gstreamer-webrtc = { version = "0.20.4", features = ["v1_20"] }
once_cell = "1.17.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
stun_codec = { git = "https://github.com/mraerino/stun_codec.git", rev = "dfb411ad421d78961ba14fc289f5a116939c044a" }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
webrtc-ice = "0.9.1"
